[Priyanka]Added:Pacehder screen added

--- a/src/app/views/pages/Motor/motor/motor.component.html
+++ b/src/app/views/pages/Motor/motor/motor.component.html
@@ -268,7 +268,7 @@
                 <div class="form-row">
                     <div class="form-column">
                         <a href="https://aaptfin.com/?q={{agentCode}}">
-                            <button type="submit" id="apply-btn" (click)="Submit()">Apply Now</button>
+                            <button type="submit" id="apply-btn" routerLink="placeholder" (click)="Submit()">Apply Now</button>
                         </a>
                     </div>
                 </div>
@@ -279,3 +279,5 @@
 
     </div>
 </div>
+
+<!-- routerLink="/placeholder" -->
