--- a/src/app/views/pages/Motor/motor/motor.component.html
+++ b/src/app/views/pages/Motor/motor/motor.component.html
@@ -236,7 +236,7 @@
                     </div> -->
 
                     <div class="form-column">
-                        <label for="customer-mobile  custom-width" class="cust_mob">Finizon Agent Code *</label>
+                        <label for="customer-mobile  custom-width" class="cust_mob">Falca Branch ID *</label>
                         <input type="text" formControlName="agentCode" class="form-control" name="agentCode"
                             placeholder="Enter your agent code" minlength="12" maxlength='13'>
                     </div>
@@ -257,9 +257,13 @@
                         <input type="text" formControlName="agentCode" class="input agentinput" placeholder="Enter your agent code"
                             formFieldClass="w-90perc" minlength="12" maxlength='13'>/>
                     </div> -->
-
+                    <!-- <div class="form-column">
+                        <label for="customer-mobile  custom-width" class="cust_mob">Falca Branch ID *</label>
+                        <input type="text" formControlName="agentCode" class="form-control" name="agentCode"
+                            placeholder="Enter your agent code" minlength="12" maxlength='13'>
+                    </div> -->
                     <div class="form-column">
-                        <label for="customer-mobile  custom-width" class="cust_mob">Falca Unique Id *</label>
+                        <label for="customer-mobile  custom-width" class="cust_mob">Falca Unique Reference No *</label>
                         <input type="text" formControlName="agentCode" class="form-control Falca_Unique_Id" name="agentCode"
                             placeholder="Enter your unique id" minlength="12" maxlength='13'>
                     </div>
