[Priyanka]deeted:HOSPICASH

--- a/src/app/views/shared/header/header.component.html
+++ b/src/app/views/shared/header/header.component.html
@@ -103,7 +103,7 @@
             <li><a target="_blank" rel="noopener" href="https://dev.finizon.com/spprd/wellness?referralid=svaas">Wellness</a></li> -->
 
             <li style="cursor:pointer;" ><a (click)="insurerightLink()">Insureright</a></li>
-            <li style="cursor:pointer;" ><a (click)="hospicashLink()">Hospicash</a></li>
+            <!-- <li style="cursor:pointer;" ><a (click)="hospicashLink()">Hospicash</a></li> -->
             <li style="cursor:pointer;" ><a (click)="wellnessLink()">Wellness</a></li>
 
             <li style="cursor:pointer;" ><a (click)="insurefitLink()">InsureFit 360</a></li>
@@ -129,7 +129,7 @@
         <div class="card card-body">
           <ul>
             <li style="cursor:pointer;" ><a (click)="insurerightLink()">Insureright</a></li>
-            <li style="cursor:pointer;" ><a (click)="hospicashLink()">Hospicash</a></li>
+            <!-- <li style="cursor:pointer;" ><a (click)="hospicashLink()">Hospicash</a></li> -->
             <li style="cursor:pointer;" ><a (click)="wellnessLink()">Wellness</a></li>
 
             <li style="cursor:pointer;" ><a (click)="insurefitLink()">InsureFit 360</a></li>
