--- a/src/app/views/pages/Placeholder_screen/placeholder/placeholder.component.html
+++ b/src/app/views/pages/Placeholder_screen/placeholder/placeholder.component.html
@@ -2,6 +2,8 @@
 <div class="form-row">
     <div class="form-column">
             <button type="submit" id="apply-btn" (click)="Submit()">Submit</button>
-     
     </div>
+    <!-- <div [innerHTML]="htmlContent"></div> -->
+
 </div>
+<!-- <div [innerHTML]="htmlContent"></div> -->
